# PhysWikiScan

./: .gitignore  CMakeLists.txt  Makefile  PhysWikiScan.cpp  PhysWikiScan.sln  PhysWikiScan.vcxproj  PhysWikiScan.vcxproj.filters  README.md  README.txt  backup_all.sh  chwiki.sh  clean.sh  clean_cmake.sh  db_auto_dump.sh  db_backup.sh  db_dump.sh  db_init.sh  db_migrate.sh  db_migrate_users.sh  db_reset.sh  db_restore.sh  ids.txt  labels.txt  license.txt  macrouniverse.cpp  macrouniverse.h  macrouniverseS.cpp  macrouniverseS.h  main.cpp  new_PhysWikiOnlineN.cpp  new_commands.txt  newcommand.html  set_path.txt  stat.sh  template.html  tex.cpp  tex.h  tex2html.cpp  tex2html.h  tmp.cpp  (+1 more)
Matlab/: cpp.h  cpp2html.h  matlab.h  matlab2html.h
PhysWikiScan/: PhysWikiScan.h  newcommand.html
SLISC/: Imag.h  Scmat.h  Vbase.h  arith4.h  arithmetic.h  compare.h  config.h  copy.h  file.h  global.h  input.h  interv.h  inverv.h  lin_eq.h  matt.h  meta.h  mul.h  parser.h  reorder.h  scalar_arith.h  search.h  slice_arith.h  slisc_update.h  sort.h  string.h  time.h  tree.h  unicode.h  vector.h
SLISC/algo/: graph.h
SLISC/file/: file.h  matb.h  matt.h  sqlite_ext.h  sqlitecpp_ext.h
SLISC/str/: str.h  str_diff_patch.h  unicode.h
SLISC/utfcpp/utf8/: core.h
SLISC/util/: STL_util.h  linux.h  time.h
TeX/: tex.h  tex2html.h
backup/: editor_backup_rename.m
data/: add_history_lic.py  db_auto_dump.sh  db_dump.sh  db_restore.sh  scan-template.sql  sql-stab.py  sqlite-reorder.py  stat.sh  sync_db.sh  zotero-simplified.sql
delta-backup(experimental)/: 202107021611_0_AU.tex  202107021616_0_AU.tex  test_diff_match_patch.py
highlight/: cpp.h  cpp2html.h  matlab.h  matlab2html.h
lib/: PhysWikiScan.h  bib.h  changed_template.html  check_entry.h  code.h  entry_template.html  figures.h  fix_db.h  google_trans.h  history_author.h  index_template.html  labels.h  newcommand.html  recycle.h  scan_global.h  sqlite_db.h  statistics.h  tex.h  tex2html.h  tex_ast_parser.cpp  tex_ast_parser.h  tex_envs.h  tex_tidy.h  toc.h  tree.h
recycle/highlight/: cpp2html.h  matlab.h
services/: PhysWiki-backup.service  PhysWiki-log.service  PhysWikiScan-db-dump.service  user-notes.service
test/PhysWiki/: .gitignore  bibliography.tex  main.tex
test/PhysWiki/contents/: BiNor.tex  EditRM.tex  Sample.tex  XStexE.tex  about.tex
test/data/: scan.sql
test/html/changed/templates/: bib_template.html  changed_template.html  entry_template.html  index_template.html
test/html/online/: my.css
test/html/online/templates/: bib_template.html  changed_template.html  entry_template.html  index_template.html
